[package]
name = "cspice-sys"
version = "1.0.4"
edition = "2021"
build = "build.rs"
description = "Unsafe bindings to the NAIF CSPICE toolkit"
license = "LGPL-3.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
homepage = "https://github.com/jacob-pro/cspice-rs/tree/master/cspice-sys"
repository = "https://github.com/jacob-pro/cspice-rs"

[features]
downloadcspice = ["dep:reqwest", "dep:tokio", "dep:futures-util"]

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
reqwest = { version = "0.12.22", features = ["blocking", "stream"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
futures-util = { version = "0.3", optional = true }
